basically all corrections done. Just need Wick contraction stuff and new bit in conclusions.

--- a/Thesis.bib
+++ b/Thesis.bib
@@ -1,4 +1,22 @@
 
+@article{Dowdall:2012ab,
+      author         = "Dowdall, R. J. and Davies, C. T. H. and Hammant, T. C.
+                        and Horgan, R. R.",
+			      title          = "{Precise heavy-light meson masses and hyperfine
+                        splittings from lattice QCD including charm quarks in the
+                        sea}",
+			      journal        = "Phys. Rev.",
+			            volume         = "D86",
+				          year           = "2012",
+					        pages          = "094510",
+						      doi            = "10.1103/PhysRevD.86.094510",
+						            eprint         = "1207.5149",
+							          archivePrefix  = "arXiv",
+								        primaryClass   = "hep-lat",
+									      SLACcitation   = "%%CITATION = ARXIV:1207.5149;%%"
+									      }
+									      
+
 
 @article{PhysRevLett.19.1264,
   title = {A Model of Leptons},
@@ -370,7 +388,7 @@
 
 @article{Abe:2003sx,
       author         = "Abe, Kazuo and others",
-            title          = "{An Upper bound on the decay tau ---> mu gamma from
+            title          = "{An Upper bound on the decay $\tau \to \mu \gamma$ from
                         Belle}",
 			      collaboration  = "Belle",
 			            journal        = "Phys. Rev. Lett.",
@@ -882,8 +900,8 @@
 
 @article{Abe:2001yf,
       author         = "Abe, Kazuo and others",
-            title          = "{Measurement of B(anti-B0 ---> D+ l- anti-nu) and
-                        determination of |V(cb)|}",
+            title          = "{Measurement of $\mathcal{B}(\bar{B}^0 \to D^+ l^- \bar{\nu})$ and
+                        determination of $|V_{cb}|$}",
 			      collaboration  = "Belle",
 			            journal        = "Phys. Lett.",
 				          volume         = "B526",
@@ -934,8 +952,8 @@
 
 @article{Aubert:2009ac,
       author         = "Aubert, Bernard and others",
-            title          = "{Measurement of |V(cb)| and the Form-Factor Slope in B ---> D l- anti-nu Decays in Events Tagged by a
-                        Fully Reconstructed B Meson}",
+            title          = "{Measurement of $|V_{cb}|$ and the Form-Factor Slope in $B\to D \ell^- \bar{\nu}$ Decays in Events Tagged by a
+                        Fully Reconstructed $B$ Meson}",
 			      collaboration  = "BaBar",
 			            journal        = "Phys. Rev. Lett.",
 				          volume         = "104",
@@ -951,9 +969,9 @@
 
 @article{Aubert:2008yv,
       author         = "Aubert, Bernard and others",
-            title          = "{Measurements of the Semileptonic Decays anti-B ---> D l
-                        anti-nu and anti-B ---> D* l anti-nu Using a Global Fit to
-                        D X l anti-nu Final States}",
+            title          = "{Measurements of the Semileptonic Decays $\bar{B} \to D \ell
+                        \bar{\nu}$ and $\bar{B} \to D^* \ell  \bar{\nu}$ Using a Global Fit to
+                        $D X_l \bar{\nu}$ Final States}",
 			      collaboration  = "BaBar",
 			            journal        = "Phys. Rev.",
 				          volume         = "D79",
@@ -986,7 +1004,7 @@
 			      }
 
 @article{BUSKULIC1995236,
-title = "A measurement of $|Vcb|$ from $B^0 \to D^*l^-\nu_l$",
+title = "{A measurement of $|V_{cb}|$ from $B^0 \to D^*l^-\nu_l$}",
 journal = "Physics Letters B",
 volume = "359",
 number = "1",
@@ -1362,8 +1380,8 @@ SLACcitation   = "%%CITATION = ARXIV:1303.3234;%%"
 @article{Caprini:1997mu,
       author         = "Caprini, Irinel and Lellouch, Laurent and Neubert,
                         Matthias",
-			      title          = "{Dispersive bounds on the shape of anti-B ---> D(*)
-                        lepton anti-neutrino form-factors}",
+			      title          = "{Dispersive bounds on the shape of $\bar{B} \to D^* \ell \bar{\nu}$
+ form-factors}",
 			      journal        = "Nucl. Phys.",
 			            volume         = "B530",
 				          year           = "1998",
@@ -1378,7 +1396,7 @@ SLACcitation   = "%%CITATION = ARXIV:1303.3234;%%"
 										    
 
 @article{PhysRevD.79.013008,
-  title = {Model-independent description of $B\ensuremath{\rightarrow}\ensuremath{\pi}l\ensuremath{\nu}$ decays and a determination of $|{V}_{ub}|$},
+  title = "{Model-independent description of $B\ensuremath{\rightarrow}\ensuremath{\pi}l\ensuremath{\nu}$ decays and a determination of $|{V}_{ub}|$}",
   author = {Bourrely, Claude and Lellouch, Laurent and Caprini, Irinel},
   journal = {Phys. Rev. D},
   volume = {79},
@@ -1466,7 +1484,7 @@ SLACcitation   = "%%CITATION = ARXIV:1303.3234;%%"
 @article{Na:2015kha,
       author         = "Na, Heechang and Bouchard, Chris M. and Lepage, G. Peter
                         and Monahan, Chris and Shigemitsu, Junko",
-      title          = "{$B \rightarrow D l \nu$ form factors at nonzero recoil
+      title          = "{$B \rightarrow D \ell \nu$ form factors at nonzero recoil
                         and extraction of $|V_{cb}|$}",
       collaboration  = "HPQCD",
       journal        = "Phys. Rev.",
@@ -2288,21 +2306,6 @@ SLACcitation   = "%%CITATION = ARXIV:1303.3234;%%"
       reportNumber   = "FERMILAB-CONF-06-155-T, FPCP06-324, FPCP-2006-027",
       SLACcitation   = "%%CITATION = HEP-PH/0606023;%%"
 									      }
-
-@article{PhysRevD.79.013008,
-  title = {Model-independent description of $B\ensuremath{\rightarrow}\ensuremath{\pi}l\ensuremath{\nu}$ decays and a determination of $|{V}_{ub}|$},
-  author = {Bourrely, Claude and Lellouch, Laurent and Caprini, Irinel},
-  journal = {Phys. Rev. D},
-  volume = {79},
-  issue = {1},
-  pages = {013008},
-  numpages = {11},
-  year = {2009},
-  month = {Jan},
-  publisher = {American Physical Society},
- doi = {10.1103/PhysRevD.79.013008},
-  url = {https://link.aps.org/doi/10.1103/PhysRevD.79.013008}
-			}
 			
 
 @article{Bali:2016lva,
@@ -3882,24 +3885,6 @@ abstract = "A popular approximation in lattice gauge theory is an extrapolation 
 											  }
 											  
 
-@article{Barish:1994mu,
-      author         = "Barish, B. and others",
-            title          = "{Measurement of the anti-B ---> D* lepton anti-neutrino
-                        branching fractions and |V(cb)|}",
-			      collaboration  = "CLEO",
-			            journal        = "Phys. Rev.",
-				          volume         = "D51",
-					        year           = "1995",
-						      pages          = "1014-1033",
-						            doi            = "10.1103/PhysRevD.51.1014",
-							          eprint         = "hep-ex/9406005",
-								        archivePrefix  = "arXiv",
-									      primaryClass   = "hep-ex",
-									            reportNumber   = "CLNS-94-1285, CLEO-94-27",
-										          SLACcitation   = "%%CITATION = HEP-EX/9406005;%%"
-											  }
-											  
-
 @article{Bevan:2014iga,
       author         = "Bevan, A. J. and others",
             title          = "{The Physics of the B Factories}",
@@ -4172,8 +4157,8 @@ abstract = "A popular approximation in lattice gauge theory is an extrapolation 
 @article{Bourrely:2008za,
       author         = "Bourrely, Claude and Caprini, Irinel and Lellouch,
                         Laurent",
-			      title          = "{Model-independent description of B ---> pi l nu decays
-                        and a determination of |V(ub)|}",
+			      title          = "{Model-independent description of $B\to \pi \ell \nu$ decays
+                        and a determination of $|V_{ub}|$}",
 			      journal        = "Phys. Rev.",
 			            volume         = "D79",
 				          year           = "2009",
@@ -5920,7 +5905,7 @@ author = "B. Sheikholeslami and R. Wohlert"
 }
 
 @article{ALBRECHT1992195,
-title = "Measurement of the decay $B^0\to D^{*0}l^-\nu$",
+title = "{Measurement of the decay $B^0\to D^{*0}l^-\nu$}",
 journal = "Physics Letters B",
 volume = "275",
 number = "1",
@@ -5945,27 +5930,11 @@ author = "H. Albrecht and others"
 						            SLACcitation   = "%%CITATION = NUIMA,A346,461;%%"
 							    }
 
-@article{Abbiendi:2000hk,
-      author         = "Abbiendi, G. and others",
-            title          = "{Measurement of |V(cb)| using anti-B0 ---> D*+ lepton-
-                        anti-neutrino decays}",
-			      collaboration  = "OPAL",
-			            journal        = "Phys. Lett.",
-				          volume         = "B482",
-					        year           = "2000",
-						      pages          = "15-30",
-						            doi            = "10.1016/S0370-2693(00)00457-3",
-      eprint         = "hep-ex/0003013",
-      archivePrefix  = "arXiv",
-      primaryClass   = "hep-ex",
-      reportNumber   = "CERN-EP-2000-032, OPAL-PR-305",
-      SLACcitation   = "%%CITATION = HEP-EX/0003013;%%"
-      }
 
 @article{Abreu:2001ic,
       author         = "Abreu, P. and others",
-            title          = "{Measurement of V(cb) from the decay process anti-B0 --->
-                        D*+ lepton- anti-neutrino}",
+            title          = "{Measurement of $V_{cb}$ from the decay process 
+$\bar{B}^0\to D^{*\,+} \ell^- \bar{\nu}$}",
 			      collaboration  = "DELPHI",
 			            journal        = "Phys. Lett.",
 				          volume         = "B510",
@@ -5977,23 +5946,6 @@ author = "H. Albrecht and others"
 									      primaryClass   = "hep-ex",
 									            reportNumber   = "CERN-EP-2001-002",
 										          SLACcitation   = "%%CITATION = HEP-EX/0104026;%%"
-											  }
-
-@article{Adam:2002uw,
-      author         = "Adam, N. E. and others",
-            title          = "{Determination of the anti-B ---> D* l anti-nu decay
-                        width and |V(cb)|}",
-			      collaboration  = "CLEO",
-			            journal        = "Phys. Rev.",
-				          volume         = "D67",
-					        year           = "2003",
-						      pages          = "032001",
-						            doi            = "10.1103/PhysRevD.67.032001",
-							          eprint         = "hep-ex/0210040",
-								        archivePrefix  = "arXiv",
-									      primaryClass   = "hep-ex",
-									            reportNumber   = "CLNS-01-1774, CLEO-01-27",
-										          SLACcitation   = "%%CITATION = HEP-EX/0210040;%%"
 											  }
 
 
@@ -6014,8 +5966,8 @@ author = "H. Albrecht and others"
 
 @article{Abdallah:2004rz,
       author         = "Abdallah, J. and others",
-            title          = "{Measurement of |V(cb)| using the semileptonic decay
-                        anti-B0(d) ---> D*+ l- anti-nu(l)}",
+            title          = "{Measurement of $|V_{cb}|$ using the semileptonic decay
+$\bar{B}^0_d \to D^{*\,+} \ell^- \bar{\nu}_l$}",
 			      collaboration  = "DELPHI",
 			            journal        = "Eur. Phys. J.",
 				          volume         = "C33",
@@ -6088,9 +6040,10 @@ author = "H. Albrecht and others"
 
 @article{Dungel:2010uk,
       author         = "Dungel, W. and others",
-            title          = "{Measurement of the form factors of the decay B0 -> D*-
-                        ell+ nu and determination of the CKM matrix element
-                        |Vcb|}",
+            title          = "{Measurement of the form factors of the decay
+$B^0\to D^{*\,-} \ell^+ \nu$
+and determination of the CKM matrix element
+                        $|V_{cb}|$}",
 			      collaboration  = "Belle",
 			            journal        = "Phys. Rev.",
 				          volume         = "D82",
@@ -6247,10 +6200,9 @@ abstract = "Treating light as well as heavy pseudoscalar and vector mesons as no
 
 @article{Buskulic:1996yq,
       author         = "Buskulic, D. and others",
-            title          = "{Measurements of |V(cb)|, form-factors and branching
-                        fractions in the decays anti-B0 ---> D*+ lepton-
-                        anti-lepton-neutrino and anti-B0 ---> D+ lepton-
-                        anti-lepton-neutrino}",
+            title          = "{Measurements of $|V_{cb}|$, form-factors and branching
+                        fractions in the decays 
+$\bar{B}^0\to D^{*\,+} \ell^- \bar{\nu}_{\ell}$ and $\bar{B}^0\to D^+ \ell^-\bar{\nu}_{\ell}$}",
 			      collaboration  = "ALEPH",
 			            journal        = "Phys. Lett.",
 				          volume         = "B395",
@@ -6263,7 +6215,7 @@ abstract = "Treating light as well as heavy pseudoscalar and vector mesons as no
 
 @article{Bartelt:1998dq,
       author         = "Bartelt, John E. and others",
-            title          = "{Measurement of the B ---> D lepton neutrino branching
+            title          = "{Measurement of the $B \to D$ lepton neutrino branching
                         fractions and form-factor}",
 			      collaboration  = "CLEO",
 			            journal        = "Phys. Rev. Lett.",
@@ -6533,7 +6485,7 @@ abstract = "Treating light as well as heavy pseudoscalar and vector mesons as no
 @article{Donald:2013pea,
       author         = "Donald, G. C. and Davies, C. T. H. and Koponen, J. and
                         Lepage, G. P.",
-			      title          = "{$V_{cs}$ from $D_s \to \phi \ell \nu$ semileptonic decay
+			      title          = "{$V_{cs}$ from $D_s \to \phi \ell \bar{\nu}$ semileptonic decay
                         and full lattice QCD}",
 			      collaboration  = "HPQCD",
 			            journal        = "Phys. Rev.",
@@ -7017,8 +6969,9 @@ abstract = "Treating light as well as heavy pseudoscalar and vector mesons as no
 
 @article{Barish:1994mu,
       author         = "Barish, B. and others",
-            title          = "{Measurement of the anti-B ---> D* lepton anti-neutrino
-                        branching fractions and |V(cb)|}",
+            title          = "{Measurement of the 
+$\bar{B}\to D^* \ell \bar{\nu}$
+                        branching fractions and $|V_{cb}|$",
 			      collaboration  = "CLEO",
 			            journal        = "Phys. Rev.",
 				          volume         = "D51",
@@ -7321,23 +7274,6 @@ abstract = "Treating light as well as heavy pseudoscalar and vector mesons as no
 											  }
 
 
-@article{Dowdall:2012ab,
-      author         = "Dowdall, R. J. and Davies, C. T. H. and Hammant, T. C.
-                        and Horgan, R. R.",
-			      title          = "{Precise heavy-light meson masses and hyperfine
-                        splittings from lattice QCD including charm quarks in the
-                        sea}",
-			      journal        = "Phys. Rev.",
-			            volume         = "D86",
-				          year           = "2012",
-					        pages          = "094510",
-						      doi            = "10.1103/PhysRevD.86.094510",
-						            eprint         = "1207.5149",
-							          archivePrefix  = "arXiv",
-								        primaryClass   = "hep-lat",
-									      SLACcitation   = "%%CITATION = ARXIV:1207.5149;%%"
-									      }
-
 @article{McNeile:2012qf,
       author         = "McNeile, C. and Davies, C. T. H. and Follana, E. and
                         Hornbostel, K. and Lepage, G. P.",
@@ -7579,7 +7515,7 @@ SLACcitation   = "%%CITATION = ARXIV:1303.3234;%%"
 									      }
 
 @article{PhysRevD.79.013008,
-  title = {Model-independent description of $B\ensuremath{\rightarrow}\ensuremath{\pi}l\ensuremath{\nu}$ decays and a determination of $|{V}_{ub}|$},
+  title = "{Model-independent description of $B\ensuremath{\rightarrow}\ensuremath{\pi}l\ensuremath{\nu}$ decays and a determination of $|{V}_{ub}|$}",
   author = {Bourrely, Claude and Lellouch, Laurent and Caprini, Irinel},
   journal = {Phys. Rev. D},
   volume = {79},
@@ -8064,7 +8000,7 @@ SLACcitation   = "%%CITATION = ARXIV:1303.3234;%%"
 @article{Colquhoun:2015mfa,
       author         = "Colquhoun, B. and Dowdall, R. J. and Koponen, J. and
                         Davies, C. T. H. and Lepage, G. P.",
-      title          = "{$B\to\pi l\nu$ at zero recoil from lattice QCD with physical u/d quarks}",
+      title          = "{$B\to\pi \ell\nu$ at zero recoil from lattice QCD with physical u/d quarks}",
       journal        = "Phys. Rev.",
       volume         = "D93",
       year           = "2016",
@@ -8416,20 +8352,6 @@ SLACcitation   = "%%CITATION = ARXIV:1303.3234;%%"
       SLACcitation   = "%%CITATION = HEP-PH/0606023;%%"
 									      }
 
-@article{PhysRevD.79.013008,
-  title = {Model-independent description of $B\ensuremath{\rightarrow}\ensuremath{\pi}l\ensuremath{\nu}$ decays and a determination of $|{V}_{ub}|$},
-  author = {Bourrely, Claude and Lellouch, Laurent and Caprini, Irinel},
-  journal = {Phys. Rev. D},
-  volume = {79},
-  issue = {1},
-  pages = {013008},
-  numpages = {11},
-  year = {2009},
-  month = {Jan},
-  publisher = {American Physical Society},
- doi = {10.1103/PhysRevD.79.013008},
-  url = {https://link.aps.org/doi/10.1103/PhysRevD.79.013008}
-			}
 			
 
 @article{Bali:2016lva,
@@ -8807,7 +8729,7 @@ SLACcitation   = "%%CITATION = ARXIV:1303.3234;%%"
 @article{Colquhoun:2015mfa,
       author         = "Colquhoun, B. and Dowdall, R. J. and Koponen, J. and
                         Davies, C. T. H. and Lepage, G. P.",
-      title          = "{$B\to\pi l\nu$ at zero recoil from lattice QCD with physical u/d quarks}",
+      title          = "{$B\to\pi \ell\nu$ at zero recoil from lattice QCD with physical u/d quarks}",
       journal        = "Phys. Rev.",
       volume         = "D93",
       year           = "2016",
@@ -9059,8 +8981,8 @@ author = "H. Albrecht and others"
 
 @article{Abbiendi:2000hk,
       author         = "Abbiendi, G. and others",
-            title          = "{Measurement of |V(cb)| using anti-B0 ---> D*+ lepton-
-                        anti-neutrino decays}",
+            title          = "{Measurement of $|V_{cb}|$ using 
+$\bar{B}^0\to D^{*\,+} \ell^- \bar{\nu}$}",
 			      collaboration  = "OPAL",
 			            journal        = "Phys. Lett.",
 				          volume         = "B482",
@@ -9076,8 +8998,8 @@ author = "H. Albrecht and others"
 
 @article{Abreu:2001ic,
       author         = "Abreu, P. and others",
-            title          = "{Measurement of V(cb) from the decay process anti-B0 --->
-                        D*+ lepton- anti-neutrino}",
+            title          = "{Measurement of $V_{cb}$ from the decay process 
+$\bar{B}^0\to D^{*\,+} \ell^_ \bar{\nu}$}",
 			      collaboration  = "DELPHI",
 			            journal        = "Phys. Lett.",
 				          volume         = "B510",
@@ -9093,8 +9015,9 @@ author = "H. Albrecht and others"
 
 @article{Adam:2002uw,
       author         = "Adam, N. E. and others",
-            title          = "{Determination of the anti-B ---> D* l anti-nu decay
-                        width and |V(cb)|}",
+            title          = "{Determination of the 
+$\bar{B}\to D^* \ell \bar{\nu}$
+                        width and $|V_{cb}|$}",
 			      collaboration  = "CLEO",
 			            journal        = "Phys. Rev.",
 				          volume         = "D67",
@@ -9273,7 +9196,7 @@ author="Atoui, Mariam
 and Mor{\'e}nas, Vincent
 and Be{\v{c}}irevi{\'{c}}, Damir
 and Sanfilippo, Francesco",
-title="$B_s\to D_s l\nu_l$ near zero recoil in and beyond the Standard Model",
+title="{$B_s\to D_s \ell\nu_l$ near zero recoil in and beyond the Standard Model}",
 journal="The European Physical Journal C",
 year="2014",
 month="May",
@@ -9287,7 +9210,7 @@ url="https://doi.org/10.1140/epjc/s10052-014-2861-z"
 }
 
 @article{GLENNBOYD1996493,
-title = "Model-independent determinations of $B \to D l\nu, D^*l\nu$ form factors",
+title = "{Model-independent determinations of $B \to D \ell\nu, D^*\ell\nu$ form factors}",
 journal = "Nuclear Physics B",
 volume = "461",
 number = "3",
@@ -9300,7 +9223,7 @@ author = "C. Glenn Boyd and Benjamín Grinstein and Richard F. Lebed",
 }
 
 @article{BECHER200661,
-title = "Comment on form-factor shape and extraction of $|V_{ub}|$ from $B\to \pi l\nu$",
+title = "{Comment on form-factor shape and extraction of $|V_{ub}|$ from $B\to \pi \ell\nu$}",
 journal = "Physics Letters B",
 volume = "633",
 number = "1",
@@ -9315,7 +9238,7 @@ author = "Thomas Becher and Richard J. Hill",
 @article{McLean:2019jll,
       author         = "McLean, E. and Davies, C. T. H. and Lytle, A. T. and
                         Koponen, J.",
-			      title          = "{$B_s\to D_s^{(*)}l\nu$ Form Factors with Heavy HISQ
+			      title          = "{$B_s\to D_s^{(*)}\ell\nu$ Form Factors with Heavy HISQ
                         Quarks}",
 			      booktitle      = "{36th International Symposium on Lattice Field Theory
                         (Lattice 2018) East Lansing, MI, United States, July
@@ -9366,7 +9289,7 @@ author = "Thomas Becher and Richard J. Hill",
 
 
 @article{CLOSE1984209,
-title = "The ratio $\Gamma(B\to Dl\nu)/\Gamma(B\to D^* l\nu)$ in the quark model",
+title = "{The ratio $\Gamma(B\to D\ell\nu)/\Gamma(B\to D^* \ell\nu)$ in the quark model}",
 journal = "Physics Letters B",
 volume = "149",
 number = "1",
@@ -10044,7 +9967,7 @@ url="https://doi.org/10.1007/978-1-4684-0991-8_17"
 @article{McLean:2019sds,
       author         = "McLean, E. and Davies, C. T. H. and Lytle, A. T. and
                         Koponen, J.",
-			      title          = "{Lattice QCD form factor for $B_s\to D_s^* l\nu$ at zero
+			      title          = "{Lattice QCD form factor for $B_s\to D_s^* \ell\nu$ at zero
                         recoil with non-perturbative current renormalisation}",
 			      year           = "2019",
 			            eprint         = "1904.02046",
@@ -10072,7 +9995,7 @@ url="https://doi.org/10.1007/978-1-4684-0991-8_17"
 
 
 @unpublished{RBCmichigan,
-title= {Semi-leptonic form factors for $B_s \to K l \nu$ and $B_s \to D_s l \nu$ },
+title= "{Semi-leptonic form factors for $B_s \to K l \nu$ and $B_s \to D_s l \nu$ }",
 author = {Witzel O. and Flynn J. and Juettner A. and Soni A. and Tsang J. T. },
 year = {2018},
 note= {36th Annual International Symposium on Lattice Field Theory, July 22-28, 2018, East Lansing, MI, USA},
@@ -10091,4 +10014,54 @@ URL= {https://indico.fnal.gov/event/15949/session/3/contribution/233},
 					        primaryClass   = "hep-lat",
 						      SLACcitation   = "%%CITATION = ARXIV:1305.1462;%%"
 						      }
-						      
+
+
+
+@article{Kiselev:1999sc,
+      author         = "Kiselev, V. V. and Likhoded, A. K. and Onishchenko, A.
+                        I.",
+			      title          = "{Semileptonic $B_c$ meson decays in sum rules of QCD and
+                        NRQCD}",
+			      journal        = "Nucl. Phys.",
+			            volume         = "B569",
+				          year           = "2000",
+					        pages          = "473-504",
+						      doi            = "10.1016/S0550-3213(99)00505-2",
+						            eprint         = "hep-ph/9905359",
+							          archivePrefix  = "arXiv",
+								        primaryClass   = "hep-ph",
+									      reportNumber   = "DESY-99-053",
+									            SLACcitation   = "%%CITATION = HEP-PH/9905359;%%"
+										    }
+
+@inproceedings{Prelovsek:2013cta,
+      author         = "Prelovsek, Sasa",
+            title          = "{Lattice QCD review of charmonium and open-charm
+                        spectroscopy}",
+			      booktitle      = "{Proceedings, 6th International Workshop on Charm Physics
+                        (Charm 2013): Manchester, UK, August 31-September 4,
+                        2013}",
+			      url            = "http://www.slac.stanford.edu/econf/C130831/papers/1310.4354.pdf",
+			            year           = "2013",
+				          eprint         = "1310.4354",
+					        archivePrefix  = "arXiv",
+						      primaryClass   = "hep-lat",
+						            SLACcitation   = "%%CITATION = ARXIV:1310.4354;%%"
+							    }
+
+
+@article{Lepage:1992xa,
+      author         = "Lepage, G. Peter and Mackenzie, Paul B.",
+            title          = "{On the viability of lattice perturbation theory}",
+	          journal        = "Phys. Rev.",
+		        volume         = "D48",
+			      year           = "1993",
+			            pages          = "2250-2264",
+				          doi            = "10.1103/PhysRevD.48.2250",
+					        eprint         = "hep-lat/9209022",
+						      archivePrefix  = "arXiv",
+						            primaryClass   = "hep-lat",
+							          reportNumber   = "FERMILAB-PUB-91-269-T, NSF-ITP-90-227,
+                        FERMILAB-PUB-91-355-T-REV",
+			      SLACcitation   = "%%CITATION = HEP-LAT/9209022;%%"
+			      }
