--- a/conclusions.tex
+++ b/conclusions.tex
@@ -8,11 +8,11 @@ Future experimental data may be combined with this result to produce a new deter
 
 We found $B_s\to D_sl\nu$ form factors using heavy-HISQ, also improving on the precision in comparison to previous lattice results. For the first time, we were able to obtain lattice data spanning the entire $q^2$ range, due to the properties of the heavy-HISQ method. From these form factors, we found
 \begin{align}
-  R_{D_s}|_{\text{SM}} = 0.2985(51),
+  R_{D_s}|_{\text{SM}} = 0.2985(43)_{\text{stat}}(27)_{\text{sys}}.
 \end{align}
 which can be combined with future experimental data to provide a new test of the Standard Model, namely a new probe into the possibility of lepton flavour violation.
 
-Besides the successes from the heavy-HISQ approach, I have discovered some problems with using NRQCD-HISQ currents to compute semileptonic $b\to c$ transitions on the lattice. Namely, it was discovered that the expansion of NRQCD-HISQ currents do not converge very fast. $\order{1/m_b^2}$ terms are important for the dispersion relation of heavy-light mesons. So-called negligable pieces of the spacial vector current have large magnitudes:
+Besides the successes from the heavy-HISQ approach, I have discovered some problems with using NRQCD-HISQ currents to compute semileptonic $b\to c$ transitions on the lattice. Namely, it was discovered that the expansion of NRQCD-HISQ currents do not converge very fast. $\order{1/m_b}$ and possibly $\order{1/m_b^2}$ terms are important for the dispersion relation of heavy-light mesons. So-called negligible pieces of the spacial vector current have large magnitudes:
 \begin{align}
   V_k^{(2)}\sim V_k^{(4)} \sim 0.35\times V_k^{(0)}\,.
 \end{align}
