--- a/intro.tex
+++ b/intro.tex
@@ -1,17 +1,17 @@
 \chapter{Introduction}
 \label{sec:intro}
 
-As the LHC continuously refuses to supply new resonances, the high energy physics community places their hope in the intensity frontier to finally break the Standard Model. Subtle differences between experimental measurements and Standard Model predictions are the new rock and roll. As collider experiments collect more data and measurements become more precise, theorists must keep up the pace and improve our predictions.
+As the LHC continuously refuses to supply exciting new resonances, the high energy physics community places their hope in the intensity frontier to finally break the Standard Model. Subtle differences between experimental measurements and Standard Model predictions are the new rock and roll. As collider experiments collect more data and measurements become more precise, theorists must keep up the pace and improve predictions.
 \\ \\
-This thesis focuses on the study of calculating form factors for semileptonic $b\to c$ transitions. These transitions occur between hadrons, bound together by QCD. At the confinement scale ($\sim 1$GeV), perturbation theory breaks down due to confinement, and the only sensible option is to compute the path integral directly, i.e., via Lattice QCD.
+This thesis focuses on the study of calculating form factors for semileptonic $b\to c$ transitions. These transitions occur between hadrons, bound together by Quantum Chromodynamics (QCD). At the confinement scale ($\sim 1$GeV), perturbation theory breaks down due to confinement, and the only sensible option is to compute the path integral directly, i.e., via Lattice QCD.
 \\ \\
-The $b$ quark is difficult to deal with on the lattice, due to its mass being beyond the momentum cutoff imposed by most computationally feasible lattice spacings. We calculated $b\to c$ form factors using two approaches to dealing with the heavy $b$, one employing a non-relativistic action for the $b$ ({\textit{NRQCD}}), and the other using a relativistic action and extrapolating upwards to the $b$ mass ({\textit{Heavy-HISQ}}). The main take-home from this thesis is the following: {\textbf{when it comes to semileptonic form factors; NRQCD is on shaky ground, and Heavy-HISQ is an excellent way to live.}} If it can be computationally afforded, heavy-HISQ is the superior of the two approahces.
+The $b$ quark is difficult to deal with on the lattice, due to its mass being beyond the momentum cutoff imposed by most computationally feasible lattice spacings. Quark masses roughly equal or greater than the momentum cutoff mean discretization effects become too large to control. We calculated $b\to c$ form factors using two approaches to dealing with the heavy $b$ quark, one employing a non-relativistic action for the $b$ ({\textit{NRQCD}}), and the other using a relativistic action with masses between the $c$ and the $b$ mass and extrapolating upwards to the $b$ mass ({\textit{Heavy-HISQ}}). The main take-home from this thesis is the following: {\textbf{when it comes to semileptonic form factors; NRQCD is on shaky ground, and Heavy-HISQ is an excellent way to live.}} If it can be computationally afforded, heavy-HISQ is the superior of the two approaches.
 \\ \\
 Using NRQCD, we attempted to compute form factors for the $B_{(s)}\to D_{(s)}l\nu$ decays. %% The depletion of the signal/noise ratio in correlation functions featuring high spacial momentum means lattice data for this decay was limited to the high $q^2$ region.
-In NRQCD, flavour-changing current operators are made of an infinite series of terms in powers of the $b$-quark velocity $v$, each requiring their own normalisation via perturbative matching to continuum QCD. It was discovered during this work that subleading terms in this series that contribute away from zero recoil infact have a large contribution. Since the perturbative matching calculations for these terms have not been performed, this makes it very difficult to obtain $b\to c$ form factors at competative precision using the NRQCD approach.
+In NRQCD, flavour-changing current operators are made of an infinite series of terms in powers of the $b$-quark velocity $v$, each requiring their own normalisation via perturbative matching to continuum QCD. It was discovered during this work that subleading terms in this series that contribute away from zero recoil infact have a large contribution. Since the perturbative matching calculations for these terms have not been performed, this makes it very difficult to obtain $b\to c$ form factors at competitive precision using the NRQCD approach (existing results are at the few-percent level).
 \\ \\
 The NRQCD approach could in principle be saved by finding non-perturbative normalizations of these large subleading terms in the current. I investigated a way of achieving this by comparing NRQCD lattice data to pre-existing and more reliable Heavy-HISQ lattice data, with limited success.
 \\ \\
-To sidestep the problems with NRQCD, we focused instead on the Heavy-HISQ approach. With this, we successfully calculated the $B_s\to D_s^*l\nu$ axial form factor at zero recoil. This demonstrated the power of heavy-HISQ and layed the groundwork for a study of both $B_s\to D_s^*l\nu$ and $B\to D^*l\nu$ form factors away from zero recoil, which are now underway. We also calculated $B_s\to D_sl\nu$ form factors throughout the full physical range of momentum transfer. These studies, when combined with future experimental data of the $B_s\to D_sl\nu$ and $B_s\to D_s^*l\nu$ decays, will supply new tests of the Standard Model, and new channels to determining the CKM parameter $|V_{cb}|$.
+To sidestep the problems with NRQCD, we focused instead on the Heavy-HISQ approach. With this, we successfully calculated the $B_s\to D_s^*l\nu$ axial form factor at zero recoil. This demonstrated the power of heavy-HISQ and laid the groundwork for a study of both $B_s\to D_s^*l\nu$ and $B\to D^*l\nu$ form factors away from zero recoil, which are now underway. We also calculated $B_s\to D_sl\nu$ form factors throughout the full physical range of momentum transfer. These studies, when combined with future experimental data of the $B_s\to D_sl\nu$ and $B_s\to D_s^*l\nu$ decays, will supply new tests of the Standard Model, and new channels to determining the CKM parameter $|V_{cb}|$.
 \\ \\
-All work reported in this thesis was performed using gluon ensembles courtesy of the MILC collaboration, accounting for dynamical up, down, strange and charm quarks in the sea. We computed correlation functions using a combination of the MILC code, and HPQCD's NRQCD code.
+All work reported in this thesis was performed using gluon field ensembles courtesy of the MILC collaboration, accounting for dynamical up, down, strange and charm quarks in the sea \cite{Bazavov:2012xda,Bazavov:2010ru}. We computed correlation functions using a combination of the MILC code, and HPQCD's NRQCD code.
